# tan

./: .gitignore  .tan-history.txt  2023-06-16.md  Cargo.toml  LICENSE.txt  README.md  install.sh
examples/: execute_program.rs
src/: ann.rs  api.rs  check.rs  context.rs  error.rs  error2.rs  eval.rs  expr.rs  lexer.rs  lib.rs  library.rs  macro_expand.rs  module.rs  ops.rs  optimize.rs  parser.rs  prune.rs  range.rs  resolve.rs  resolver.rs  scope.rs  span.rs  spanned.rs  stdlib.rs  typecheck.rs  types.rs  util.rs
src/eval/: env.rs  error.rs  eval_assertions.rs  eval_assign.rs  eval_cond.rs  eval_def.rs  eval_do.rs  eval_else.rs  eval_for.rs  eval_for_each.rs  eval_for_list.rs  eval_if.rs  eval_is_defined.rs  eval_let.rs  eval_let_ds.rs  eval_panic.rs  eval_pipe.rs  eval_scope_update.rs  eval_set.rs  eval_unless.rs  eval_use.rs  eval_when.rs  eval_while.rs  iterator.rs  prelude.rs  scope.rs  util.rs
src/expr/: expr_iter.rs  expr_transform.rs
src/lexer/: comment.rs  error.rs  token.rs
src/ops/: arithmetic.rs  eq.rs  io.rs  lang.rs  num.rs  process.rs  seq.rs  special.rs  string.rs
src/parser/: error.rs  expr.rs  util.rs
src/stdlib/: arithmetic.rs  chrono.rs  cmark.rs  cmp.rs  css_expr.rs  dict.rs  eq.rs  fs.rs  html.rs  http.rs  io.rs  json.rs  lang.rs  map.rs  network.rs  path.rs  prelude.rs  process.rs  regex.rs  rng.rs  scope.rs  seq.rs  set-alt.rs  set.rs  string.rs  testing.rs  uuid.rs
src/stdlib/network/: http.rs  (+2 more)
src/util/: args.rs  constants.rs  fmt.rs  format.rs  fs.rs  lookahead_iterator.rs  mac.rs  method.rs  module_util.rs  put_back_iterator.rs  standard_names.rs
tests/: common.rs  env_test.rs  eval_test.rs  lexer_test.rs  parser_test.rs  prune_test.rs  resolver_test.rs  scope_test.rs
tests/common/: mod.rs
tests/fixtures/: -list-destruct.tan  add-float.tan  array-destruct-rest.tan  array-destruct.tan  array-errors.tan  array.tan  array.value.tan  block-function.tan  break.tan  conditional.tan  continue.tan  data.tan  dict.tan  do_intermediate_error.tan  factorial.tan  fibonacci.tan  for-each.tan  for-let.tan  for-map.tan  for_each.tan  format-float.tan  format-str.tan  func-dict.tan  func-error.tan  func-map.tan  func-no-params.tan  func-no-params.value.tan  func-with-ann.tan  function-definition-let.tan  hello-world.tan  hello_world.tan  key-dict.tan  key-dict.value.tan  key-map.tan  list-destruct.tan  loop.tan  macro.tan  main.tan  map-destruct.tan  map.tan  (+28 more)
(+5 files in other folders)
