[package]
name = "tan"
description = "The Tan language"
version = "0.14.0"
license = "Apache-2.0"
repository = "https://github.com/tan-language/tan"
keywords = ["language", "functional", "lisp"]
authors = ["Georgios Moschovitis <gmosx@reizu.org>"]
edition = "2021"

[dependencies]
tracing = "0.1"
rand = "0.8"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
regex = { version = "1" }
rust_decimal = { version = "1.32", optional = true }
rust_decimal_macros = { version = "1.32", optional = true }
comrak = { version = "0.22", default-features = false }
reqwest = { version = "0.12", features = ["blocking"] }
# #todo consider chrono features and making optional
chrono = { version = "0.4" }
uuid = { version = "1.7", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
# #todo consider making optional
axum = { version = "0.7" }
# #todo consider making optional
png = { version = "0.17" }

[dev-dependencies]
assert_matches = "1.5"

[features]
default = ["dec", "json"]
dec = ["dep:rust_decimal", "dep:rust_decimal_macros"]
json = ["dep:serde", "dep:serde_json"]
