[package]
name = "tan"
description = "The Tan language"
version = "0.17.0"
license = "Apache-2.0"
repository = "https://github.com/tan-language/tan"
keywords = ["language", "functional", "lisp"]
authors = ["Georgios Moschovitis <gmosx@reizu.org>"]
edition = "2021"

[dependencies]
tracing = "0.1"
# libloading = "0.8"
rust_decimal = { version = "1.32" }
rust_decimal_macros = { version = "1.32" }

[dev-dependencies]
assert_matches = "1.5"
